# AI-Financial-Ecosystem

./: .env.example  .gitignore  Dockerfile.airflow  Dockerfile.api  Dockerfile.superset  README.md  airflow.cfg  alembic.ini  cli.py  docker-compose.tests.yml  docker-compose.yml  pgadmin_servers.json  pyproject.toml  requirements.txt  superset_config.py
.github/workflows/: ci.yml  readme.md
alembic/: README.md  env.py  script.py.mako
alembic/versions/: 0166e30db912_init_schema.py  262e1a9dae04_baseline.py  dd595bf39fce_create_initial_tables.py  merge_1e6f_dd59.py
api/: main.py  readme.md
api/routers/: clients.py  transactions.py
bankpy/: crud.py  db.py  readme.md  schemas.py  security.py
dags/: bankpy_dag.py  readme.md
dags/ml/: fraude_detect.py  ml_utils.py  recomendacao_produtos.py  saldo_predict.py  segmentacao_clientes.py
dags/spark_jobs/: clientes_flat.py  contas_flat.py  readme.md  transacoes_flat.py  validate_data.py
dags/sql/: 01-create-superset.sql  02-init.sql  03-create-accounts-and-generate-transacoes.sql  04-create-ml-results.sql  05-report-analytics.sql
grafana_data/: grafana.db  readme.md
grafana_data/plugins/grafana-lokiexplore-app/: MANIFEST.txt
scripts/: BankPy.ps1  airflow_dag_debug.ps1  automacao-superset.ps1  cli.py  create_admin.py  criar-database-via-api.ps1  readme.md  seed_db.py  setup-bankpy.ps1
streamlit_app/: app.py
superset_home/: .bash_history
tests/: conftest.py  readme.md  test_crud_products.py  test_crud_transfer.py  test_crud_users.py  test_db_integration.py  test_etl_output.py  test_flow.py
